# esp32-captive-portal

./: README.md  library.json  platformio.ini
data/: index.html
lib/captive_portal/: captive_portal.c  captive_portal.h
src/: CMakeLists.txt  main.c
